--- a/config.toml
+++ b/config.toml
@@ -3,19 +3,19 @@
     # Register at https://www.pexels.com/api/ to get your API key.
     # You can use multiple keys to avoid rate limits.
     # For example: pexels_api_keys = ["123456789","abcdefghi"]
-    pexels_api_keys = ['Z3nAUVZjxM7zswgFdGyUIeNZG75yLTVHRCYnwUpxeTqNarJPVCqAD42B']
+    pexels_api_keys = ['']
 
     llm_provider="moonshot" # "openai" or "moonshot" or "oneapi"
 
     # OpenAI API Key
     # Visit https://openai.com/api/ for details on obtaining an API key.
-#    openai_api_key = "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"
+#    openai_api_key = ""
 #    openai_base_url = ""
 #    openai_model_name = "gpt-3.5-turbo"
 
     # Moonshot API Key
     # Visit https://platform.moonshot.cn/console/api-keys to get your API key.
-    moonshot_api_key="sk-slDx0nJVpq0Ow2CgZbFopTUhyvzlw3R1QhoEd5lxIiEqTElf"
+    moonshot_api_key=""
     moonshot_base_url = "https://api.moonshot.cn/v1"
     moonshot_model_name = "moonshot-v1-8k"
 
